tests/baselines/reference/parserClassDeclaration7.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration7.ts (1 errors) ====
    declare module M {
      declare class C {
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
      }
    }